import "goby/common/protobuf/option_extensions.proto";
import "dccl/protobuf/option_extensions.proto";

package goby.acomms.protobuf;

message NetworkAck
{
    option (dccl.msg).id = 6;
    option (dccl.msg).max_bytes = 32;

    required int32 message_src = 1 [
        (dccl.field).min = -1,
        (dccl.field).max = 30,
        (dccl.field).in_head = true
    ];
    required int32 message_dest = 2 [
        (dccl.field).min = -1,
        (dccl.field).max = 30,
        (dccl.field).in_head = true
    ];
    optional uint64 message_time = 3
        [(dccl.field).codec = "_time", (dccl.field).in_head = true];

    required int32 message_dccl_id = 4
        [(dccl.field).min = 0, (dccl.field).max = 0x7FFF];

    required int32 ack_src = 10 [
        (dccl.field).min = -1,
        (dccl.field).max = 30,
        (dccl.field).in_head = true
    ];

    enum AckType
    {
        ACK = 1;
        EXPIRE = 2;
    }
    optional AckType ack_type = 11;
}
